# MiroVizor

./: .gitignore  ManifestLucha.txt  README.md  miro_ontology.json  miro_ontology_en.json  pyproject.toml  sample.txt
miro_vizor/: README.md  __init__.py  app_admin.py  app_api.py  app_streamlit.py  cli.py  embedder.py  exporter.py  graphify_adapter.py  languages.py  marker.py  ontology.py  scorer.py  tokenizer.py
miro_vizor/tests/: test_admin.py  test_marker.py  test_web.py
reports/graphify/: _analyze_code.py  _analyze_own.py  code_graph.html  code_graph_own.html  code_graph_stats.json  report.md  sample_result.json  text_graph.html
reports/sample/: generate_report.py  report.md
